--- a/frontend/i18n/locales/su.json
+++ b/frontend/i18n/locales/su.json
@@ -7,7 +7,11 @@
   "app": {
     "title": "Aplikasi Borsa"
   },
-  "logout": "Kaluar",
+  "auth": {
+    "password": "Sandi",
+    "login": "Lebet",
+    "logout": "Kaluar"
+  },
   "nav": {
     "home": "Imah",
     "production_status": "Status Produksi",
