--- a/frontend/i18n/locales/id.json
+++ b/frontend/i18n/locales/id.json
@@ -7,36 +7,109 @@
   "app": {
     "title": "Aplikasi Borsa"
   },
-  "logout": "Keluar",
+  "auth": {
+    "password": "Kata Sandi",
+    "login": "Masuk",
+    "logout": "Keluar"
+  },
   "nav": {
     "home": "Rumah",
     "production_status": "Status Produksi",
-    "products": "Produk",
+    "products": "Sepatu",
     "labor_costs": "Biaya Tenaga Kerja",
-    "artisans": "Perajin",
-    "payroll": "Daftar Upah"
+    "artisans": "Pengrajin",
+    "payroll": "Penggajian"
   },
   "page": {
-    "artisan_create": "Create a New Artisan",
-    "artisan_edit": "Edit an Artisan",
-    "artisans": "Artisans",
-    "color_create": "Create a New Color",
-    "color_edit": "Edit a Color",
-    "colors": "Colors",
-    "labor_costs": "Production Costs",
-    "labor_cost_update": "Update a Production Cost",
-    "payroll": "Payroll",
-    "product_category_create": "Create a New Product Category",
-    "product_categories": "Product Categories",
-    "product_category_edit": "Edit a Product Category",
-    "product_group_create": "Create a New Product Group",
-    "product_groups": "Product Groups",
-    "product_group_edit": "Edit a Product Group",
-    "product_create": "Create a New Product",
-    "products": "Products",
-    "product_edit": "Edit a Product",
-    "work_create": "Create a New Work",
-    "works": "Production Status",
-    "work_edit": "Edit a Work"
+    "artisan_create": "Buat Pengrajin Baru",
+    "artisan_edit": "Ubah Pengrajin",
+    "artisans": "Pengrajin",
+    "color_create": "Buat Warna Baru",
+    "color_edit": "Ubah Warna",
+    "colors": "Warna",
+    "labor_costs": "Biaya Tenaga Kerja",
+    "labor_cost_update": "Ubah Biaya Tenaga Kerja",
+    "payroll": "Penggajian",
+    "product_category_create": "Buat Kategori Sepatu Baru",
+    "product_categories": "Kategori Sepatu",
+    "product_category_edit": "Ubah Kategori Sepatu",
+    "product_group_create": "Buat Kelompok Sepatu Baru",
+    "product_groups": "Kelompok Sepatu",
+    "product_group_edit": "Ubah Kelompok Sepatu",
+    "product_create": "Buat Sepatu Baru",
+    "products": "Sepatu",
+    "product_edit": "Ubah Sepatu",
+    "work_create": "Buat Pekerjaan Baru",
+    "works": "Status Produksi",
+    "work_edit": "Ubah Pekerjaan"
+  },
+  "create_btn": {
+    "product": "Sepatu Baru",
+    "color": "Warna Baru",
+    "product_group": "Kelompok Sepatu Baru",
+    "product_category": "Kategori Sepatu Baru",
+    "artisan": "Pengrajin Baru",
+    "work": "Pekerjaan Baru"
+  },
+  "btn": {
+    "create": "Buat",
+    "update": "Ubah",
+    "delete": "Hapus",
+    "cancel": "Batal"
+  },
+  "label": {
+    "id": "ID",
+    "date": "Tanggal",
+    "order_no": "SPK",
+    "sku": "SKU",
+    "sku_numeric": "SKU Angka Saja",
+    "size": "Ukuran",
+    "sizes": "Ukuran {'|'} Jumlah",
+    "quantity": "Jumlah",
+    "tasks": "Tugas",
+    "type": "Tugas",
+    "artisan": "Pengrajin",
+    "done_at": "Tanggal Selesai",
+    "product": "Sepatu",
+    "product_name": "Nama Sepatu",
+    "product_group": "Kelompok Sepatu",
+    "product_category": "Kategori Sepatu",
+    "select_language": "Pilih Bahasa",
+    "select_sizes": "Pilih Ukuran",
+    "select_colors": "Pilih Warna",
+    "select_jobs": "Pilih Jabatan",
+    "gender": "Jenis Kelamin",
+    "colors": "Warna",
+    "labor_costs": "Biaya Tenaga Kerja",
+    "first_name": "Nama Depan",
+    "last_name": "Nama Belakang",
+    "jobs": "Jabatan",
+    "job": "Tugas",
+    "payable": "Yang Harus Dibayar",
+    "cost": "Biaya",
+    "total_payable": "Total Yang Harus Dibayar",
+    "total_quantity": "Total Jumlah",
+    "pairs": "Tidak Ada|Satu Pasang|{count} pasang",
+    "name": "Nama",
+    "pick_color": "Pilih Warna",
+    "by": "Oleh: {artisan}",
+    "at": ", Pada: {done_at}"
+  },
+  "card": {
+    "fill_quantities": "Isi Jumlah Sepatu",
+    "fill_artisans": "Isi Nama Pengrajin"
+  },
+  "jobs": {
+    "draw_upper": "Menggambar Upper",
+    "draw_lining": "Menggambar Lining",
+    "stitch_upper": "Menjahit Upper",
+    "stitch_outsole": "Menjahit Outsole",
+    "stitch_insole": "Menjahit Insole",
+    "last": "Membentuk"
+  },
+  "genders": {
+    "men": "Laki-laki",
+    "women": "Perempuan",
+    "kids": "Anak-anak"
   }
 }
