--- a/frontend/i18n/locales/su.json
+++ b/frontend/i18n/locales/su.json
@@ -78,7 +78,7 @@
     "select_sizes": "Pilih Ukuran",
     "select_colors": "Pilih Warna",
     "select_jobs": "Pilih Jabatan",
-    "gender": "Jenis Kelamin",
+    "gender": "Golongan",
     "colors": "Warna",
     "labor_costs": "Ongkos",
     "first_name": "Nami Hareup",
