Add search bars

--- a/frontend/i18n/locales/en.json
+++ b/frontend/i18n/locales/en.json
@@ -93,7 +93,8 @@
     "name": "Name",
     "pick_color": "Pick Color",
     "by": "By: {artisan}",
-    "at": ", On: {done_at}"
+    "at": ", On: {done_at}",
+    "search": "Search"
   },
   "card": {
     "fill_quantities": "Enter Shoe Quantity",
