vee-validate on labor costs

--- a/frontend/i18n/locales/en.json
+++ b/frontend/i18n/locales/en.json
@@ -123,6 +123,9 @@
         "string": {
           "inclusive": "At least {minimum} characters"
         },
+        "number": {
+          "inclusive": "Minimum value is {minimum}"
+        },
         "array": {
           "inclusive": "Choose at least {minimum} item"
         }
